--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(DCToHW)
 add_subdirectory(ExportChiselInterface)
 add_subdirectory(ExportVerilog)
 add_subdirectory(FIRRTLToHW)
+add_subdirectory(FSMToCore)
 add_subdirectory(FSMToSV)
 add_subdirectory(HandshakeToDC)
 add_subdirectory(HandshakeToHW)
