--- a/tools/circt-opt/CMakeLists.txt
+++ b/tools/circt-opt/CMakeLists.txt
@@ -37,6 +37,7 @@ target_link_libraries(circt-opt
   CIRCTFSM
   CIRCTFSMTransforms
   CIRCTFSMToSV
+  CIRCTFSMToCore
   CIRCTHandshake
   CIRCTHandshakeToDC
   CIRCTHandshakeToHW
